add some scripts, and url mirror

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -6,7 +6,7 @@ network --onboot yes --device eth0 --bootproto dhcp --noipv6
 rootpw  --iscrypted $6$wUiIVoWVL95UJ2IB$oz3OJi6CVMvSg01QMucu2VEu3K3P2LoBBCxE5im/r27HE..mkH3PO2VEdOhvid1FvaD7FZya7.78B1YCwIUM31
 firewall --service=ssh
 authconfig --enableshadow --passalgo=sha512
-selinux --enforcing
+selinux --disabled
 timezone --utc Pacific/Auckland
 bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
 zerombr
@@ -20,4 +20,16 @@ reboot
 @core
 @server-policy
 @uek3-kernel-repo
+curl
+gcc
+kernel-devel
+kernel-headers
+yum-utils
 %end
+%post
+#!/bin/bash
+mv /etc/sudoers /etc/sudoers.ori
+grep -v -i 'requiretty' /etc/sudoers.ori | tee /etc/sudoers
+sync
+echo 3 > /proc/sys/vm/drop_caches
+sync
